[fix]#9267 fix timeline filters overflow

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -541,9 +541,6 @@ $small-screen: 959px;
 		filters{
 			width: calc(100% - 80px);
 			margin-top: 5px;
-			i{
-				margin-bottom: 5px;
-			}
 		}
 	}
 	ul.icons-tabs{
